--- a/ecommerce/src/App.css
+++ b/ecommerce/src/App.css
@@ -12,6 +12,10 @@
   height: 150px;
   padding: 20px;
   color: white;
+  border: 10px solid red;
+  max-width:960px;
+  margin: 0 auto;
+
 }
 
 .App-title {
