--- a/ecommerce/src/App.css
+++ b/ecommerce/src/App.css
@@ -1,20 +1,21 @@
 .App {
   text-align: center;
+  max-width:960px;
+  margin: 0 auto;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 30px;
+  height: 80px;
 }
 
 .App-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: red;
   border: 10px solid red;
-  max-width:960px;
-  margin: 0 auto;
+
 
 }
 
