--- a/ecommerce/src/App.css
+++ b/ecommerce/src/App.css
@@ -31,3 +31,8 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.Grid {
+  display:grid;
+  grid-template-columns: auto auto auto;
+}
