using require() to load images, added more css (mediaquery)

--- a/ecommerce/src/App.css
+++ b/ecommerce/src/App.css
@@ -36,3 +36,11 @@
   display:grid;
   grid-template-columns: auto auto auto;
 }
+
+@media (max-width: 580px) {
+  .Grid {
+    display:grid;
+    grid-template-columns: auto auto ;
+  }
+
+}
