--- a/ecommerce/src/App.css
+++ b/ecommerce/src/App.css
@@ -34,13 +34,13 @@
 
 .Grid {
   display:grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 @media (max-width: 580px) {
   .Grid {
     display:grid;
-    grid-template-columns: auto auto ;
+    grid-template-columns: 1fr 1fr ;
   }
 
 }
