--- a/ecommerce/src/App.css
+++ b/ecommerce/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
-  /* max-width:960px; */
+  max-width:960px;
   margin: 0 auto;
+  border:1px green solid;
+
 }
 
 /* fix css- decide on header & app css, how to apply app css w/o
@@ -19,12 +21,14 @@ and content to have seperate css widths*/
   width:100%;
   position:fixed;
   top:0px;
+  left:0;
   border:1px solid red;
 }
 
 .App-header {
+  box-sizing: border-box;
   background-color: #222;
-  height: 150px;
+  height: 200px;
   padding: 20px;
   color: red;
   border: 10px solid lightblue;
