refactoring and css grid changes

--- a/ecommerce/src/App.css
+++ b/ecommerce/src/App.css
@@ -84,6 +84,16 @@ form{
 .Grid {
   display:grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-gap:5px;
+
+}
+
+.Product-Wrap{
+  background: lightgrey;
+}
+
+.Product-Wrap:hover{
+  background-color: silver;
 }
 
 @media (max-width: 580px) {
