--- a/ecommerce/src/appcopy.css
+++ b/ecommerce/src/appcopy.css
@@ -33,7 +33,6 @@ and content to have seperate css widths*/
   border: 10px solid lightblue;
   max-width:960px;
   margin:0 auto;
-  position:relative;
 }
 /* .Search{
   display:inline-block;
@@ -44,18 +43,10 @@ and content to have seperate css widths*/
   left:0;
 } */
 
-/* .Search{
-  position:relative;
-  left:0;
-  top:
-} */
 
 .SearchForm{
   border:3px solid blue;
-  width:98.95%;
-  position:absolute;
-  left:0;
-  bottom:0;
+  width:100%;
 }
 
 
@@ -77,7 +68,9 @@ and content to have seperate css widths*/
 } */
 
 
-
+.App-intro {
+  font-size: large;
+}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
@@ -93,7 +86,6 @@ and content to have seperate css widths*/
 
 
 .Grid {
-  border:2px solid red;
 
   display:grid;
   grid-template-columns: 1fr 1fr 1fr;
