--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -14,6 +14,7 @@
   top:0px;
   left:0;
   border:1px solid red;
+
 }
 
 .App-header {
@@ -37,10 +38,12 @@
   height:30px;
   bottom:0;
   left:0;
-  right:0;
+  width:50%;
 }
 
-
+.space{
+  height:300px
+}
 
 
 /* .App-header {
@@ -69,10 +72,8 @@
 
 
 
-.Select{
-  margin-top:200px;
-}
 
+/*----------------------------content ------------------------------------------ */
 .content {
   display:grid;
   grid-template-columns: 1fr 4fr;
@@ -80,13 +81,24 @@
   text-align: center;
   max-width:960px;
   margin: 0 auto;
-  border:20px green solid;
+  border:20px purple solid;
 }
 
+/*----------------------------left content--------------------------------------------- */
 .filters{
+  display:grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap:5px;
   border:5px solid red;
+  height:350px;
 }
 
+.filters div {
+border:1px solid blue;
+
+}
+
+/*----------------------------right content ------------------------------------------ */
 
 .Grid {
   border:2px solid yellow;
@@ -121,6 +133,10 @@
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.40);
 
 }
+/*---------------------------------------------------------------------------- */
+
+
+
 
 .footer{
   box-sizing: border-box;
