--- a/photography-site/src/App.css
+++ b/photography-site/src/App.css
@@ -7,35 +7,59 @@ body{
   border:1px solid blue;
   margin-bottom: 75px;
   display:flex;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   margin:0 auto;
+  height:600px;
+  /* align-items: flex-start; */
+  justify-content: flex-start;
+
+
+
 }
 
 .div{
 
   border:1px solid green;
-  margin:20px;
   color:white;
-  padding:3px;
+  margin:10px;
 
+
+
+}
+
+/* .div2{
+  align-self: auto;
 }
 
 .App1 .div2 {
   flex: 2 1 0;
+
 }
 
 .App2 .div2 {
-  flex: 2 1 auto;
-}
+  flex: 1 1 0;
+} */
 
-.div{
-  flex:1;
-}
-
-
+/* .div{
+  flex:1 1 30%;
+} */
 
 
 
+/* when items arent set to flex
+you can use justify-content on container
+both below on container
+align works on flex or non flex items
+ */
+
+/* .App2{
+  justify-content: flex-end; (main axis)
+  align-items: flex-end;     (cross axis)
+} */
+
+/* on flex item below while align align-items
+is already set  */
+  /* align-self: flex-end;  */
 
 
 
