ecomm header switched to flexbox

--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -1,48 +1,70 @@
-.App{
+
+  .App{
   background-color: lightblue;
   min-height:1680px;
 }
+
+li {
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none;
+  color:white;
+}
+
+/* --------------------------------------------------
+   Nav
+-----------------------------------------------------*/
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-  position:relative;
+  height: 70px;
 }
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+
 
 .Header-fix{
   width:100%;
   position:fixed;
   top:0px;
   left:0;
-  border:1px solid red;
-
 }
 
 .App-header {
+  display:flex;
+  flex-flow: row;
+  justify-content: space-between;
+  align-items: center;
+
   box-sizing: border-box;
   background-color: #222;
-  height: 150px;
   color: red;
   text-align: center;
   max-width:1280px;
-  border:10px green solid;
-  margin:0 auto;
-  position:relative;
 }
 
+.flexList{
+  display: flex;
+  justify-content: flex-start;
+}
 
+ul li{
+  margin-right: 5px;
+}
 
-.SearchForm{
-  display:inline-block;
-  border:3px solid red;
-  position: absolute;
-  height:30px;
-  bottom:0;
-  left:0;
-  width:50%;
+.SearchForm {
+  /* border:2px solid red;
+  margin-left: auto; */
+  margin-right: 1em;
 }
 
 .space{
-  height:300px
+  height:150px
 }
 
 
@@ -63,11 +85,6 @@
 
 
 
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
 
 
 
