--- a/photography-site/src/App.css
+++ b/photography-site/src/App.css
@@ -7,11 +7,13 @@ body{
   border:1px solid blue;
   margin-bottom: 75px;
   display:flex;
-  flex-flow: column wrap;
+  flex-flow: row wrap;
   margin:0 auto;
   height:600px;
+  width:50%;
   /* align-items: flex-start; */
-  justify-content: flex-start;
+  justify-content: space-around;
+  align-content: stretch;
 
 
 
