--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -16,16 +16,6 @@ a{
 /* --------------------------------------------------
    Nav
 -----------------------------------------------------*/
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 70px;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
 
 
 .Header-fix{
@@ -46,6 +36,7 @@ a{
   color: red;
   text-align: center;
   max-width:1280px;
+  margin: 0 auto;
 }
 
 .flexList{
@@ -67,21 +58,17 @@ ul li{
   height:150px
 }
 
+.App-logo {
+  /* animation: App-logo-spin infinite 20s linear; */
+  height: 70px;
+}
 
-/* .App-header {
-  background-color: black;
-  transition: background-color 1.5s ease;
-  height: 150px;
-  padding: 20px;
-  color: red;
-  border: 10px solid red;
+
+/* @keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 } */
 
-/*ending transition*/
-
-/* .App-header:hover {
-  background-color: green;
-} */
 
 
 
