--- a/photography-site/src/App.css
+++ b/photography-site/src/App.css
@@ -1,4 +1,5 @@
 body{
+
   background-color: black;
   }
 
@@ -9,11 +10,11 @@ body{
   display:flex;
   flex-flow: row wrap;
   margin:0 auto;
-  height:600px;
+  height:300px;
   width:50%;
   /* align-items: flex-start; */
   justify-content: space-around;
-  align-content: stretch;
+  align-items: center;
 
 
 
@@ -24,17 +25,30 @@ body{
   border:1px solid green;
   color:white;
   margin:10px;
+}
 
-
-
+.div1{
+  order:5
+}
+.div2{
+  order:4
+}
+.div3{
+  order:3
+}
+.div4{
+  order:2
+}
+.div5{
+  order:1
 }
 
 /* .div2{
   align-self: auto;
-}
+} */
 
-.App1 .div2 {
-  flex: 2 1 0;
+/* .App1 .div2 {
+  flex: 1 1 0;
 
 }
 
@@ -42,9 +56,9 @@ body{
   flex: 1 1 0;
 } */
 
-/* .div{
-  flex:1 1 30%;
-} */
+ .div{
+  flex:1 1 0;
+}
 
 
 
