--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -62,26 +62,14 @@ ul li{
   /* animation: App-logo-spin infinite 20s linear; */
   height: 70px;
 }
-
-
 /* @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 } */
-
-
-
-
-
-
-
-
-
 /*----------------------------content ------------------------------------------ */
 .content {
-  display:grid;
-  grid-template-columns: 1fr 4fr;
-  grid-gap:5px;
+  display:flex;
+
   text-align: center;
   max-width:960px;
   margin: 0 auto;
@@ -89,10 +77,10 @@ ul li{
 }
 
 /*----------------------------left content--------------------------------------------- */
-.filters{
-  display:grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-gap:5px;
+.left {
+  display:flex;
+  flex-flow: column;
+  flex:1;
   border:5px solid red;
   height:350px;
 }
@@ -101,14 +89,25 @@ ul li{
 border:1px solid blue;
 
 }
-
 /*----------------------------right content ------------------------------------------ */
+.right{
+  border:7px solid blue;
+  flex:5;
+  display:flex;
+  flex-flow: column;
+}
+.rightTop{
+  border: 7px solid red;
+  display:flex;
+  justify-content: flex-end;
+}
 
 .Grid {
-  border:2px solid yellow;
-  display:grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap:5px;
+  border:4px solid yellow;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  /* align-content: center; */
 }
 
 .Product-Wrap{
