--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -69,53 +69,69 @@ ul li{
 /*----------------------------content ------------------------------------------ */
 .content {
   display:flex;
-
   text-align: center;
   max-width:960px;
   margin: 0 auto;
-  border:20px purple solid;
+  /* border:20px purple solid; */
 }
 
 /*----------------------------left content--------------------------------------------- */
 .left {
+  margin-top: 19px;
+  flex:1;
   display:flex;
   flex-flow: column;
-  flex:1;
-  border:5px solid red;
   height:350px;
+  margin-right:5px;
 }
 
-.filters div {
+.filters .xx {
 border:1px solid blue;
-
+flex:1;
+display:flex;
+flex-flow: column;
+justify-content: space-around;
 }
+
+.xx1{
+  margin-bottom: 10px;
+}
+
+.xx2 {
+  display: flex;
+  flex-flow: column;
+}
+
 /*----------------------------right content ------------------------------------------ */
 .right{
-  border:7px solid blue;
+  /* border:7px solid blue; */
   flex:5;
   display:flex;
   flex-flow: column;
 }
 .rightTop{
-  border: 7px solid red;
+  /* border: 7px solid red; */
   display:flex;
   justify-content: flex-end;
 }
 
 .Grid {
-  border:4px solid yellow;
+  padding: 5px;
+  border:1px solid yellow;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  /* align-content: center; */
 }
 
 .Product-Wrap{
+  box-sizing: border-box;
   background: lightgrey;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
-  margin:5px;
   transition: .3s;
+  width:30%;
+  /* border: 2px solid red; */
+  margin:7px;
 
 }
 
