--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -102,6 +102,18 @@ justify-content: space-around;
   flex-flow: column;
 }
 
+.xx3 {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  width:80%;
+  margin:0 auto;
+}
+
+.xx3 a {
+  width:30%;
+}
+
 /*----------------------------right content ------------------------------------------ */
 .right{
   /* border:7px solid blue; */
