--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -177,6 +177,30 @@ margin-top: 5px;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.40);
 
 }
+
+.Product-Image {
+  position: relative;
+}
+.Product-Image p {
+  border: #1C1016 solid 2px;
+  background-color: #2B1F36;
+  color:white;
+  border-radius: 10px;
+  display:inline-block;
+  padding: 0 5px 0 5px ;
+  position:absolute;
+  top:-3px;
+  right:17px;
+}
+
+.Product-Image p:hover{
+  background-color: yellow;
+  color:#2B1F36;
+}
+
+
+
+
 /*---------------------------------------------------------------------------- */
 
 
