--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -180,20 +180,32 @@ margin-top: 5px;
 
 .Product-Image {
   position: relative;
+  display: flex;
+  justify-content: center;
 }
-.Product-Image p {
+.view-1 {
   border: #1C1016 solid 2px;
   background-color: #2B1F36;
   color:white;
   border-radius: 10px;
-  display:inline-block;
   padding: 0 5px 0 5px ;
-  position:absolute;
-  top:-3px;
-  right:17px;
+  position: absolute;
+  top:10px;
 }
 
-.Product-Image p:hover{
+.view-2 {
+  border: #1C1016 solid 2px;
+  background-color: #2B1F36;
+  color:white;
+  border-radius: 10px;
+  padding: 0 5px 0 5px ;
+  position: absolute;
+  top:10px;
+  visibility: hidden;
+}
+
+.Product-Image div:hover{
+  display: inline-block;
   background-color: yellow;
   color:#2B1F36;
 }
@@ -270,7 +282,7 @@ hr{
 -----------------------------------------------------*/
 
 #modal-container {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   z-index: 10;
@@ -300,4 +312,5 @@ hr{
   right:5px;;
   font-size: 3em;
   color: red;
+  cursor: pointer;
 }
