--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -69,6 +69,7 @@ ul li{
 /*----------------------------content ------------------------------------------ */
 .content {
   display:flex;
+  align-items: baseline;
   text-align: center;
   max-width:960px;
   margin: 0 auto;
@@ -77,14 +78,14 @@ ul li{
 
 /*----------------------------left content--------------------------------------------- */
 .left {
-  margin-top: 19px;
   flex:1;
   display:flex;
   flex-flow: column;
+  justify-content: flex-start;
   height:350px;
   margin-right:5px;
-
   color:white;
+
 }
 
 .filters .xx {
@@ -118,13 +119,18 @@ margin-top: 5px;
 .xx3 {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   width:80%;
   margin:0 auto;
 }
 
 .xx3 a {
   width:30%;
+
+}
+
+.xx3 a img{
+  border-radius:20%;
 }
 
 /*----------------------------right content ------------------------------------------ */
@@ -135,14 +141,20 @@ margin-top: 5px;
   flex-flow: column;
 }
 .rightTop{
-  /* border: 7px solid red; */
   display:flex;
   justify-content: flex-end;
+  color:yellow;
+
+}
+
+.rightTop select{
+  margin-right: 18px;
+  margin-left: 5px;
 }
 
 .Grid {
   padding: 5px;
-  border:1px solid yellow;
+
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
