--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -95,6 +95,7 @@ flex-flow: column;
 justify-content: space-around;
 background-color: #38363b;
 margin-top: 5px;
+border-radius: 3px;
 }
 
 .xx1{
@@ -234,7 +235,6 @@ margin-top: 5px;
   box-sizing: border-box;
   padding: 20px;
   background-image: linear-gradient(#1C1016, black, #1C1016);
-  background-color: white;
   color:#e5e5e5;
   display:flex;
   flex-flow:column;
