--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -48,7 +48,7 @@ ul li{
   margin-right: 5px;
 }
 
-.SearchForm {
+.temp {
   /* border:2px solid red;
   margin-left: auto; */
   margin-right: 1em;
@@ -141,6 +141,18 @@ border-radius: 3px;
   display:flex;
   flex-flow: column;
 }
+
+.searchForm0{
+  display:flex;
+  justify-content: flex-end;
+  color:yellow;
+  margin-right: 18px;
+  margin-left: 5px;
+  margin-bottom: 5px;
+
+}
+
+
 .rightTop{
   display:flex;
   justify-content: flex-end;
