--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -305,8 +305,19 @@ hr{
    modal
 -----------------------------------------------------*/
 
-#modal-container {
+.modal-container {
   display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  height:100%;
+  width: 100%;
+  position:absolute;
+  background-color: rgba(0,0,0,0.7);
+}
+
+.modal-container2 {
+  display: flex;
   justify-content: center;
   align-items: center;
   z-index: 10;
