--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -155,9 +155,20 @@ border-radius: 3px;
 
 .rightTop{
   display:flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   color:yellow;
+}
 
+.filtered{
+  display: flex;
+  justify-content: space-around;
+  margin-left: 20px;
+}
+
+.filtered div{
+  margin-left: 10px;
+  font-size: .9em;
+  color: lightgrey;
 }
 
 .rightTop select{
