--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -37,6 +37,7 @@ a{
   text-align: center;
   max-width:1280px;
   margin: 0 auto;
+
 }
 
 .searchFix{
@@ -100,13 +101,23 @@ ul li{
   position: absolute;
   background-color: white;
   text-align: left;
-  width:140px;
-  z-index: 10;
+  width:50%;
+  color:blue;
+  font-size: 1.5em;
+  background: pink;
+  z-index: 1000;
+}
+
+.sugg ul li {
+  color: blue;
+
 }
 
 .sugg2{
   display: none;
 }
+
+
 /*----------------------------content ------------------------------------------ */
 .content {
   display:flex;
@@ -149,6 +160,7 @@ display: none;
   height:30px;
   margin-bottom: 10px;
   border:.02px solid #2B1F36;
+
 }
 
 .xx1 div{
@@ -367,7 +379,7 @@ hr{
   display: none;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: 300;
   height:100%;
   width: 100%;
   position:absolute;
@@ -378,7 +390,7 @@ hr{
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: 300;
   height:100%;
   width: 100%;
   position:absolute;
